# desktop-companion

./: .gitignore  CHANGELOG.md  LICENSE  PLAN.md  README.ja.md  README.md  README.vi.md  RELEASE.md  package-lock.json  package.json
.github/workflows/: ci.yml  pages.yml  release.yml
app/: flower.html  pet.html  popup.html  quick.html  settings.html  tasks.html  ui.css
app/js/: bridge.js  flower.js  pet-config.js  pet-lookat.js  pet-zoom.js  popup.js  quick.js  settings.js  tasks.js  tauri-api.js
app/media/: companion.css
app/media/webview/: audio.js  background-panel.css  background-panel.js  chat.css  chat.js  core.js  cursor-chibi.css  expression.js  interaction.js  main.js  markdown-editor.css  markdown-editor.js  rotation.js  ui.js
docs/landing/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  llm.rs  main.rs  selection.rs  store.rs  windows.rs
